--- a/localization_server/config/amcl_config_real.yaml
+++ b/localization_server/config/amcl_config_real.yaml
@@ -37,8 +37,8 @@ amcl:
     z_max: 0.05
     z_rand: 0.5
     z_short: 0.05
-    set_initial_pose: true
-    initial_pose:
-        x: -0.022
-        y: 0.0010
-        yaw: 0.011
+    # set_initial_pose: true
+    # initial_pose:
+    #     x: -0.022
+    #     y: 0.0010
+    #     yaw: 0.011
