--- a/path_planner_server/config/planner_real.yaml
+++ b/path_planner_server/config/planner_real.yaml
@@ -17,17 +17,17 @@ global_costmap:
       global_frame: map
       robot_base_frame: robot_base_link
       use_sim_time: True
-      robot_radius: 0.15
+      robot_radius: 0.3
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"] # This order is important!
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.35
+        inflation_radius: 0.4
       always_send_full_costmap: True
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
