--- a/path_planner_server/config/recoveries_real.yaml
+++ b/path_planner_server/config/recoveries_real.yaml
@@ -10,7 +10,7 @@ behavior_server:
       plugin: "nav2_behaviors/BackUp"
     wait:
       plugin: "nav2_behaviors/Wait"
-    global_frame: robot_odom
+    global_frame: map
     robot_base_frame: robot_base_link
     transform_timeout: 0.1
     use_sim_time: true
