--- a/path_planner_server/config/planner_real.yaml
+++ b/path_planner_server/config/planner_real.yaml
@@ -1,7 +1,7 @@
 planner_server:
   ros__parameters:
     expected_planner_frequency: 10.0
-    use_sim_time: True
+    use_sim_time: False
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
@@ -16,7 +16,7 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: robot_base_link
-      use_sim_time: True
+      use_sim_time: False
       robot_radius: 0.3
       resolution: 0.05
       track_unknown_space: true
@@ -27,7 +27,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.4
+        inflation_radius: 0.35
       always_send_full_costmap: True
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
