CP12 all tasks working in sim - dynamic footprint added

--- a/path_planner_server/config/controller_sim.yaml
+++ b/path_planner_server/config/controller_sim.yaml
@@ -9,7 +9,8 @@ controller_server:
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["general_goal_checker"]
     controller_plugins: ["FollowPath"]
-    
+    # Keepout filter
+    filters: ["keepout_filter"]
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
@@ -76,6 +77,7 @@ local_costmap:
       resolution: 0.05
       robot_radius: 0.3
       plugins: ["voxel_layer", "inflation_layer"]
+      filters: ["keepout_filter"] # For Keepout Zone
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -103,4 +105,8 @@ local_costmap:
       static_layer:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
+      keepout_filter:
+        plugin: "nav2_costmap_2d::KeepoutFilter"
+        enabled: True
+        filter_info_topic: "/costmap_filter_info"
         
