--- a/localization_server/config/amcl_config_real.yaml
+++ b/localization_server/config/amcl_config_real.yaml
@@ -1,6 +1,6 @@
 amcl:
   ros__parameters:
-    use_sim_time: True
+    use_sim_time: false
     alpha1: 0.2
     alpha2: 0.2
     alpha3: 0.2
@@ -17,9 +17,9 @@ amcl:
     laser_max_range: 100.0
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
-    max_beams: 60
-    max_particles: 8000
-    min_particles: 200
+    max_beams: 90
+    max_particles: 2500
+    min_particles: 250
     odom_frame_id: "robot_odom"
     pf_err: 0.05
     pf_z: 0.99
@@ -31,14 +31,9 @@ amcl:
     sigma_hit: 0.2
     tf_broadcast: true
     transform_tolerance: 1.0
-    update_min_a: 0.2
-    update_min_d: 0.25
+    update_min_d: 0.10000
+    update_min_a: 0.08727
     z_hit: 0.5
     z_max: 0.05
     z_rand: 0.5
     z_short: 0.05
-    # set_initial_pose: true
-    # initial_pose:
-    #     x: -0.022
-    #     y: 0.0010
-    #     yaw: 0.011
